tests/ui/parser/missing-enum-issue-125446.stderr
error: missing `enum` for enum definition
  --> $DIR/missing-enum-issue-125446.rs:1:1
   |
LL | Whoops {
   | ^^^^^^
   |
help: add `enum` here to parse `Whoops` as an enum
   |
LL | enum Whoops {
   | ++++

error: aborting due to 1 previous error

