tests/ui/parser/missing-enum-issue-125446.rs
Whoops {
//~^ ERROR missing `enum` for enum definition
//~| HELP add `enum` here to parse `Whoops` as an enum
    OptionA,
    OptionB,
}
